--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME='ZARK Cigerettes'
 APP_ENV=local
 APP_KEY=base64:zyegfZK6vzAa+5s52dcRVCVC26j+vIyTWhiswZ31bnY=
 APP_DEBUG=true
-APP_URL=http://www.zarkcigarettes.haltradedistribution.com/public/
+APP_URL=https://zarkcigarettes.haltradedistribution.com
 
 LOG_CHANNEL=stack
 
