--- a/.env
+++ b/.env
@@ -9,9 +9,14 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=haltrade_daily_deep_dive
-DB_USERNAME=haltrade_ddd
+DB_DATABASE=zarkciga_db
+DB_USERNAME=zarkciga_tm
 DB_PASSWORD=@Hal_2019
+
+
+#DB_DATABASE=haltrade_daily_deep_dive
+#DB_USERNAME=haltrade_ddd
+#DB_PASSWORD=@Hal_2019
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
